# legacy-gwmfe

./: LICENSE  README  README.md  SISC26955.ps  SISC26956.ps  gwmfe1ds-gtools.tgz  gwmfe1ds.tgz  gwmfe2ds-gtools.tgz
gwmfe1ds/: CHANGES  CMakeLists.txt  LICENSE  README  README.md
gwmfe1ds/Config/: config  config-aix-xlf  config-hpux-f77  config-linux-absoftf77  config-linux-g77  config-linux-gfortran  config-linux-lahey  config-linux-nagf90  config-linux-nagfor  config-solaris-f77  config-sunos-f77
gwmfe1ds/burgers/: CMakeLists.txt  Makefile  go  pde.f
gwmfe1ds/burgers/Data/: mfegrf-1  mfegrf-2  mfegrf-3  mfegrf-4  mfegrf-5  mfein-1  mfein-2  mfein-3  mfein-4  mfein-5  mfelog-1  mfelog-2  mfelog-3  mfelog-4  mfelog-5
gwmfe1ds/conv-diff/: CMakeLists.txt  Makefile  go  mfein  parameters.h  pde.f
gwmfe1ds/conv-diff/Data/: mfegrf-1  mfegrf-2  mfein-1  mfelog-1  mfelog-2
gwmfe1ds/drift-diff/: CMakeLists.txt  Makefile  go  parameters.h  pde.f
gwmfe1ds/drift-diff/Data/: mfegrf-1  mfegrf-2  mfein-1  mfein-2  mfelog-1  mfelog-2
gwmfe1ds/gtools/gp1/: README
gwmfe1ds/gtools/gp1/man/: gp1.1  gplot1.1
gwmfe1ds/gtools/gp1/src/: CMakeLists.txt  README-RULES1.txt  alfa1.c  clip1.c  comact1.c  defs1.h  disp.c  draw1.c  gplot1.c  init1.c  init1.h  makefile  mfegrf  pass2.c  pgs1.h  rules1.c  rules1.y  switches.h  sysdep.c  tek4010.c  util1.c
gwmfe1ds/navier-stokes/: CMakeLists.txt  Makefile  go  mfein  parameters.h  pde.f
gwmfe1ds/navier-stokes/Data/: mfegrf-1  mfelog-1
gwmfe1ds/source/: CMakeLists.txt
gwmfe1ds/source/common/: bdf2.f  bsolve.f  second.c  second_etime.f  second_mclock.f  second_nag.f
gwmfe1ds/source/scalar/: README
gwmfe1ds/source/system/: cdgl.f  cmtx.f  cres.f  eltfy.f  eltpp.f  eltvec.f  enorm.f  init.f  ivals.f  jac.f  lapl.f  laplvc.f  linsol.f  main.f  rdvars.f  regrhs.f  res.f  scheck.f  wrgrf.f  wrlog.f  ydot.f
gwmfe2ds/: CHANGES  CMakeLists.txt  LICENSE  README  README.md
gwmfe2ds/Config/: config-aix-xlf  config-linux-absoftf77  config-linux-g77  config-linux-gfortran  config-linux-nagf95  config-linux-nagfor  config-sunos-f77
gwmfe2ds/arsenic/: .gp2lbl  CMakeLists.txt  Makefile  go  init.f  mfein  mkgrf.f  parameters.h  pde.f  prob.f  wrhead.f  wrlog.f  wrsoln.f
gwmfe2ds/arsenic/Data/: mfegrf-1  mfegrf-2  mfein-2  mfelog-1  mfelog-2
gwmfe2ds/burgers/: .gdb_history  .gp2lbl  CMakeLists.txt  Makefile  mfein  parameters.h  pde.f  prob.f
gwmfe2ds/burgers/Data/: mfegrf-1  mfelog-1
gwmfe2ds/gtools/: CMakeLists.txt  Makefile  mkgrf.f
gwmfe2ds/gtools/gp2/: README
gwmfe2ds/gtools/gp2/doc/: addcol.1  cats.1  ccs.1  gp2.1  gplot2.1  gpp.1  mfegrf.5  mfile.1  sendplot.1
gwmfe2ds/gtools/gp2/new-src/: CMakeLists.txt  Makefile  README-RULES2.txt  alfa2.c  clip2.c  comact2.c  defs2.h  disp.c  draw2.c  gplot2.c  gpp.c  init2.c  pscript.c  rules2.c  rules2.y  sysdep.c  tek4010.c  util2.c  xs.c
gwmfe2ds/gtools/gp2/src/: CMakeLists.txt  Makefile  alfa2.c  cats.c  comact2.c  defs2.h  draw2.c  gplot2.c  gpp.c  init2.c  matrix.c  pgs2.h  pscript.c  pscript.old  rules2.c  rules2.y  switches.h  sysdep.c  util2.c  xs.c
gwmfe2ds/heat/: .gp2lbl  CMakeLists.txt  Makefile  go  mfein  parameters.h  pde.f  prob.f  run-example.sh
gwmfe2ds/heat/Data/: mfegrf-1  mfegrf-2  mfegrf-3  mfegrf-4  mfein-2  mfein-3  mfein-4  mfelog-1  mfelog-2  mfelog-3  mfelog-4
gwmfe2ds/oil/: 5spot.f  CMakeLists.txt  Makefile  go  init.f  parameters.h  pde.f  wrsoln.f
gwmfe2ds/oil/Data/: mfegrf-1  mfegrf-2  mfegrf-3  mfein-1  mfein-2  mfein-3  mfelog-1  mfelog-2  mfelog-3
gwmfe2ds/semi/: .gp2lbl  CMakeLists.txt  Makefile  go  init.f  parameters.h  pde.f  prob.f  source  voltage.f
gwmfe2ds/semi/Data/: mfegrf-1  mfein-1  mfelog-1
gwmfe2ds/soap/: .gp2lbl  CMakeLists.txt  Makefile  enorm.f  go  locpp.f  mfein  parameters.h  pde.f  prob.f  scheck.f  source
gwmfe2ds/soap/Data/: mfein-2  mfelog-1  mfelog-2
gwmfe2ds/source/common/: bdf2.f  meshlib.f  sbsolve.f  second_etime_.f
gwmfe2ds/source/scalar/: amtx.f  ares.f  cmtx.f  cpmtx.f  dfdy.f  enorm.f  gthvec.f  init.f  jac.f  lapl.f  laplvc.f  linsol.f  locpp.f  main.f  meshlib.f  rdhead.f  rdvars.f  regmtx.f  regres.f  regrhs.f  res.f  sbsolve.f  scheck.f  sctdgl.f  sctmtx.f  sctvec.f  wrhead.f  wrsoln.f  ydot.f
gwmfe2ds/source/system/: .gp2lbl  amtx.f  ares.f  bdf2.f  bsolve.f  cmtx.f  cpmtx.f  dfdy.f  enorm.f  gthvec.f  init.f  jac.f  lapl.f  laplvc.f  linsol.f  locpp.f  main.f  rdhead.f  rdvars.f  regmtx.f  regres.f  regrhs.f  res.f  scheck.f  sctdgl.f  sctmtx.f  sctvec.f  wrhead.f  wrlog.f  wrsoln.f  ydot.f
